# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1233 2010-06-22 10:29:13 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta1 (2010/??/??)
 - (2010/06/22) Improved otrs.CheckModules.pl script.
 - (2010/06/22) Updated CPAN module Authen::SASL to version 2.15.
 - (2010/06/22) Updated CPAN module MIME::Tools to version 5.428.
 - (2010/06/22) Updated CPAN module Net::IMAP::Simple to version 1.1916.
 - (2010/06/22) Updated CPAN module Net::POP3::SSLWrapper to version 0.04.
 - (2010/06/22) Updated CPAN module XML::Parser to version 0.712.
 - (2010/06/22) Updated CPAN module Text::CSV to version 1.18.
 - (2010/06/14) New DirectoryRead Function to read filenames with Unicode::Normalize
 - (2010/06/09) Fixed bug#5447 - Added SMTP TLS support, to send out emails via
    mail servers (MS Exchange!) that require this.
 - (2010/06/02) Fixed bug#5426 - Can't set timezone for customer users.
 - (2010/05/28) Fixed bug#5262 - Sort by "pending time" includes ticket with no
    pending state.
 - (2010/05/28) Added option to use TicketPendingTimeSet() to null out the
    Pending Time, similar to the implementation for TicketFreeTimeSet().
 - (2010/05/21) Fixed bug#4459 - Two related error messages in S/MIME if you
    call it and it's disabled, and one message is enough.
 - (2010/05/21) Fixed bug#5377 - Show all users in AdminUser as a default.
 - (2010/05/20) Fixed bug#1846 - AdminCustomerUserGroup shows all CustomerUsers,
    even if you have thousands of them.
 - (2010/05/20) Fixed bug#5103 - Searching for non-existing company does not
    return "no results found".
 - (2010/05/20) Implemented bug#1701 - In customer's ticket overview, subject
    should come from the first article.