@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1233 2010-06-22 10:29:13 mh Exp $
+# $Id: CHANGES,v 1.1234 2010-06-22 13:01:35 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -311,6 +311,7 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.8 (2010/??/??)
+ - (2010/06/16) Fixed bug#5488 - AutoPriorityIncrease runs into failures.
  - (2010/06/16) Fixed bug#5478 - Web Installer has 'editable' license text.
  - (2010/05/31) Fixed bug#5385 - Queue name is not used in signature on ticket
     creation.
